kubernetes-manifests/atlantis-statefulset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: atlantis-external-facing-ip
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: atlantis-ingress-certs
  rules:
  - host: atlantis-test.example.com
    http:
      paths:
      - backend:
          service:
            name: atlantis
            port: 
              number: 80
        pathType: ImplementationSpecific
